--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nytreact",
   "version": "1.0.0",
-  "description": "MERN app that lets you search NYT articles",
-  "main": "server.js",
+  "description": "React app that lets the user search for and save articles from the New York Times",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -12,17 +12,23 @@
     "url": "git+https://github.com/kristinakarrass/nytreact.git"
   },
   "keywords": [
-    "node.js",
     "react",
-    "mongodb",
-    "express"
+    "node",
+    "express",
+    "mongoDB"
   ],
   "author": "Kristina Karrass",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kristinakarrass/nytreact/issues"
   },
   "homepage": "https://github.com/kristinakarrass/nytreact#readme",
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^1.15.0"
+  },
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
@@ -30,6 +36,7 @@
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.1"
   }
 }
